examples/test/testpolicy13671.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13671
  namespace: namespace133
spec:
  podSelector:
    matchLabels:
      key13: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value10
          key17: value33
      podSelector:
        matchLabels:
          key29: value30
          key18: value47
          key8: value17
